# compilatron

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  package.sh  setup.sh
cmake/: uninstall.cmake
cmake/compilers/: apple-clang.cmake  clang-cl.cmake  clang.cmake  gcc.cmake  msvc.cmake
cmake/toolchains/android/: android.cmake
cmake/toolchains/ios/: ios.cmake
cmake/toolchains/linux/: clang.cmake  gcc.cmake
cmake/toolchains/macos/: clang.cmake
cmake/toolchains/windows/: msvc.cmake
code/: CMakeLists.txt  gui_main.cpp
code/common/: common.cpp  common.hpp  cpu_info.cpp  cpu_info.hpp  log_entry.hpp  log_saver.cpp  log_saver.hpp  loggers.cpp  loggers.hpp  process_executor.cpp  process_executor.hpp  sleep_inhibitor.cpp  sleep_inhibitor.hpp  state_manager.cpp  state_manager.hpp
code/dependency/: dependency.hpp  dependency_checker.cpp  dependency_checker.hpp  dependency_manager.cpp  dependency_manager.hpp  dependency_unit.cpp  dependency_unit.hpp  dependency_window.cpp  dependency_window.hpp  dependency_window_installation.cpp  dependency_window_paths.cpp  dependency_window_presets.cpp  dependency_window_ui.cpp  installation_job.cpp  installation_job.hpp
code/gui/: compiler_gui.cpp  compiler_gui.hpp  compiler_gui_build.cpp  compiler_gui_dialogs.cpp  compiler_gui_logging.cpp  compiler_gui_notifications.cpp  compiler_gui_presets.cpp  compiler_gui_tabs.cpp  compiler_gui_validation.cpp  compiler_tab.hpp  log_panel.cpp  log_panel.hpp  preset_diff.cpp  preset_diff.hpp  preset_manager.cpp  preset_manager.hpp  rate_limit_tracker.cpp  rate_limit_tracker.hpp  simple_dependency_dialog.cpp  simple_dependency_dialog.hpp  status_icons.cpp  status_icons.hpp  version_manager.cpp  version_manager.hpp  version_selector_dialog.cpp  version_selector_dialog.hpp
resources/: README.md  app.rc  compilatron-uninstall.sh.in  compilatron.desktop.in
